@@ -1,5 +1,6 @@
 2012-04-21 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Require div2007 0.10.0
+	* Follow-up 12 to feature #34447: Avoid retrieving private key when no password is set
 
 2012-04-20 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Remove global declarations from tx_srfeuserregister_tca
